Added List Item

--- a/index.html
+++ b/index.html
@@ -10,6 +10,12 @@
 <body>
     <h1>Git Tutorial</h1>
     <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Neque temporibus unde tenetur aliquam, veritatis enim? Dolor eaque animi doloremque odio?</p>
+    <ul>
+        <li>List Item 1</li>
+        <li>List Item 2</li>
+        <li>List Item 3</li>
+        <li>List Item 4</li>
+    </ul>
 </body>
 
 </html>
