--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 
 <body>
-    <h1>Git Tutorial</h1>
+    <h1>Awesome Git Tutorial</h1>
     <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Neque temporibus unde tenetur aliquam, veritatis enim? Dolor eaque animi doloremque odio?</p>
     <ul>
         <li>List Item 1</li>
