--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
         <li>List Item 2</li>
         <li>List Item 3</li>
         <li>List Item 4</li>
+        <li>List Item 5</li>
     </ul>
 </body>
 
